--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "samriddhiframes",
   "main": "index.js",
   "dependencies": {
-    "apn": "^2.2.0",
     "async": "^2.6.1",
     "base-64": "^0.1.0",
     "base64-img": "^1.0.4",
-    "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "buffer-crc32": "^0.2.13",
@@ -29,39 +27,11 @@
     "express-fileupload": "^0.3.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.0.0",
-    "express-validator": "^4.3.0",
-    "fcm-push": "^1.1.3",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^9.0.0",
-    "helmet": "^3.20.0",
-    "i18n": "^0.8.3",
-    "is-base64": "^1.1.0",
-    "md5": "^2.2.1",
-    "mongodb": "^3.7.4",
-    "mongoose": "^5.9.28",
-    "node-cache": "^4.2.0",
-    "node-forge": "^0.9.1",
-    "nodemailer": "^4.6.7",
-    "object-sizeof": "^1.4.0",
-    "quickthumb": "0.0.12",
-    "randomstring": "^1.1.5",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.8",
-    "response-time": "^2.3.2",
-    "slug": "^0.9.1",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "striptags": "^3.1.1",
-    "time": "^0.12.0",
-    "twilio": "^3.17.3",
-    "uid2": "0.0.3",
-    "unirest": "^0.6.0",
-    "utf8": "^3.0.0",
-    "xlsx": "^0.12.13"
+    "express-validator": "^4.3.0"
   },
   "scripts": {
     "start": "node index"
   },
-  "author": "Fullestop",
-  "license": "Fullestop"
+  "author": "Blue Zone",
+  "license": "Blue Zone"
 }
