--- a/package.json
+++ b/package.json
@@ -4,44 +4,7 @@
   "description": "samriddhiframes",
   "main": "index.js",
   "dependencies": {
-    "async": "^2.6.1",
-    "base-64": "^0.1.0",
-    "base64-img": "^1.0.4",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "buffer-crc32": "^0.2.13",
-    "clone": "^2.1.2",
-    "compression": "^1.7.4",
-    "connect-mongo": "^3.2.0",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "csurf": "^1.10.0",
-    "curl-request": "^1.1.1",
-    "dateformat": "^3.0.3",
-    "dotenv": "^6.0.0",
-    "ejs": "^2.6.1",
-    "exec": "^0.2.1",
-    "express": "^4.16.3",
-    "express-breadcrumbs": "^0.0.2",
-    "express-ejs-layouts": "^2.4.0",
-    "express-fileupload": "^0.3.0",
-    "express-flash": "^0.0.2",
-    "express-session": "^1.0.0",
-    "express-validator": "^4.3.0",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^9.0.0",
-    "i18n": "^0.8.3",
-    "is-base64": "^1.1.0",
-    "md5": "^2.2.1",
-    "mongodb": "^3.7.4",
-    "node-cache": "^4.2.0",
-    "node-forge": "^0.9.1",
-    "quickthumb": "0.0.12",
-    "randomstring": "^1.1.5",
-    "request": "^2.88.2",
-    "slug": "^0.9.1",
-    "striptags": "^3.1.1",
-    "time": "^0.12.0"
+    "async": "^2.6.1"
   },
   "scripts": {
     "start": "node index"
