--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "samriddhiframes",
   "main": "index.js",
   "dependencies": {
-    "async": "^2.6.1"
+    "async": "^2.6.1",
+    "express": "^4.16.3",
+    "express-breadcrumbs": "^0.0.2",
+    "express-ejs-layouts": "^2.4.0",
+    "express-fileupload": "^0.3.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.0.0",
+    "express-validator": "^4.3.0"
   },
   "scripts": {
     "start": "node index"
